--- a/src/index.html
+++ b/src/index.html
@@ -48,37 +48,109 @@
         <a href="#" class="btn btn-ghost normal-case text-xl">Random Lotto</a>
       </div>
       <div class="navbar-end">
-        <button class="btn btn-ghost btn-circle"><a href="#">Login</a></button>
-        <button class="btn btn-ghost btn-circle">
-          <div class="indicator">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-5 w-5"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
-              />
-            </svg>
-            <span class="badge badge-xs badge-primary indicator-item"></span>
-          </div>
+        <button class="btn btn-ghost p-0">
+          <label for="login" class="btn modal-button">LOGIN</label>
         </button>
       </div>
     </div>
-    <div class="card w-96 bg-base-100 shadow-xl">
-      <figure>
-        <img src="https://placeimg.com/400/225/arch" alt="Shoes" />
-      </figure>
-      <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">Buy Now</button>
+    <div class="container flex flex-wrap justify-evenly m-0">
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <input type="checkbox" id="sidebar" class="m-5" />
+        <div class="card-body">
+          <h2 class="card-title">초콕!</h2>
+          <p>다 아는 맛인데 우유랑 먹으면 맛있쥬?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">이젠 제껍니다</button>
+          </div>
+        </div>
+      </div>
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <input type="checkbox" id="sidebar" class="m-5" />
+        <div class="card-body">
+          <h2 class="card-title">하리보!</h2>
+          <p>몸에 안좋은게 맛있쥬?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">이젠 제껍니다</button>
+          </div>
+        </div>
+      </div>
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <input type="checkbox" id="sidebar" class="m-5" />
+        <div class="card-body">
+          <h2 class="card-title">컵라면!</h2>
+          <p>고칼로리가 맛있쥬?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">이젠 제껍니다</button>
+          </div>
+        </div>
+      </div>
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <input type="checkbox" id="sidebar" class="m-5" />
+        <div class="card-body">
+          <h2 class="card-title">오다리!</h2>
+          <p>피씨방에서 먹는건 다 맛있쥬?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">이젠 제껍니다</button>
+          </div>
+        </div>
+      </div>
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <input type="checkbox" id="sidebar" class="m-5" />
+        <div class="card-body">
+          <h2 class="card-title">급식우유!</h2>
+          <p>꽝이라고 볼 수 있겠쥬?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">이젠 제껍니다</button>
+          </div>
+        </div>
+      </div>
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <input type="checkbox" id="sidebar" class="m-9" />
+        <div class="card-body">
+          <h2 class="card-title">산소!</h2>
+          <p>숨 크게 쉬면 되겠쥬?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">이젠 제껍니다</button>
+          </div>
+        </div>
+      </div>
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <input type="checkbox" id="sidebar" class="m-9" />
+        <div class="card-body">
+          <h2 class="card-title">랜덤박스!</h2>
+          <p>이것저것 들어있쥬?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">이젠 제껍니다</button>
+          </div>
+        </div>
+      </div>
+      <div class="card w-96 bg-base-100 shadow-xl">
+        <input type="checkbox" id="sidebar" class="m-9" />
+        <div class="card-body">
+          <h2 class="card-title">김장김치!</h2>
+          <p>난데없는 김치가 나오쥬?</p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">이젠 제껍니다</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <input type="checkbox" id="login" class="modal-toggle" />
+    <div class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+        <h3 class="font-bold text-lg p-3">LOGIN</h3>
+        <input
+          type="text"
+          placeholder="Your ID Type here"
+          class="input input-bordered input-info w-full max-w-xs m-5"
+        />
+        <input
+          type="password"
+          placeholder="Your Password Type here"
+          class="input input-bordered input-info w-full max-w-xs m-5"
+        />
+        <div class="modal-action">
+          <label for="login" class="btn">Enter!</label>
         </div>
       </div>
     </div>
