--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,12 @@
     <title>Random Lotto</title>
   </head>
   <body>
+    <div class="container w-full h-24 overflow-hidden">
+      <video muted autoplay loop class="w-full">
+        <source src="Network.mp4" type="video/mp4" />
+        <strong>Your browser does not support the video</strong>
+      </video>
+    </div>
     <div class="navbar bg-base-100">
       <div class="navbar-start">
         <div class="dropdown">
@@ -45,7 +51,7 @@
         </div>
       </div>
       <div class="navbar-center">
-        <a href="#" class="btn btn-ghost normal-case text-xl">Random Lotto</a>
+        <p>Random Lotto</p>
       </div>
       <div class="navbar-end">
         <button class="btn btn-ghost p-0">
@@ -56,7 +62,7 @@
     <div class="container flex flex-wrap justify-evenly m-0">
       <div class="card w-96 bg-base-100 shadow-xl">
         <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body">
+        <div class="card-body invisible">
           <h2 class="card-title">초콕!</h2>
           <p>다 아는 맛인데 우유랑 먹으면 맛있쥬?</p>
           <div class="card-actions justify-end">
@@ -66,7 +72,7 @@
       </div>
       <div class="card w-96 bg-base-100 shadow-xl">
         <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body">
+        <div class="card-body invisible">
           <h2 class="card-title">하리보!</h2>
           <p>몸에 안좋은게 맛있쥬?</p>
           <div class="card-actions justify-end">
@@ -76,7 +82,7 @@
       </div>
       <div class="card w-96 bg-base-100 shadow-xl">
         <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body">
+        <div class="card-body invisible">
           <h2 class="card-title">컵라면!</h2>
           <p>고칼로리가 맛있쥬?</p>
           <div class="card-actions justify-end">
@@ -86,7 +92,7 @@
       </div>
       <div class="card w-96 bg-base-100 shadow-xl">
         <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body">
+        <div class="card-body invisible">
           <h2 class="card-title">오다리!</h2>
           <p>피씨방에서 먹는건 다 맛있쥬?</p>
           <div class="card-actions justify-end">
@@ -96,7 +102,7 @@
       </div>
       <div class="card w-96 bg-base-100 shadow-xl">
         <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body">
+        <div class="card-body invisible">
           <h2 class="card-title">급식우유!</h2>
           <p>꽝이라고 볼 수 있겠쥬?</p>
           <div class="card-actions justify-end">
@@ -106,7 +112,7 @@
       </div>
       <div class="card w-96 bg-base-100 shadow-xl">
         <input type="checkbox" id="sidebar" class="m-9" />
-        <div class="card-body">
+        <div class="card-body invisible">
           <h2 class="card-title">산소!</h2>
           <p>숨 크게 쉬면 되겠쥬?</p>
           <div class="card-actions justify-end">
@@ -116,7 +122,7 @@
       </div>
       <div class="card w-96 bg-base-100 shadow-xl">
         <input type="checkbox" id="sidebar" class="m-9" />
-        <div class="card-body">
+        <div class="card-body invisible">
           <h2 class="card-title">랜덤박스!</h2>
           <p>이것저것 들어있쥬?</p>
           <div class="card-actions justify-end">
@@ -126,7 +132,7 @@
       </div>
       <div class="card w-96 bg-base-100 shadow-xl">
         <input type="checkbox" id="sidebar" class="m-9" />
-        <div class="card-body">
+        <div class="card-body invisible">
           <h2 class="card-title">김장김치!</h2>
           <p>난데없는 김치가 나오쥬?</p>
           <div class="card-actions justify-end">
