--- a/src/index.html
+++ b/src/index.html
@@ -142,8 +142,11 @@
       </div>
     </div>
     <input type="checkbox" id="login" class="modal-toggle" />
-    <div class="modal modal-bottom sm:modal-middle">
-      <div class="modal-box">
+    <label
+      for="login"
+      class="modal modal-bottom sm:modal-middle cursor-pointer"
+    >
+      <label class="modal-box relative" for="">
         <h3 class="font-bold text-lg p-3">LOGIN</h3>
         <input
           type="text"
@@ -158,7 +161,7 @@
         <div class="modal-action">
           <label for="login" class="btn">Enter!</label>
         </div>
-      </div>
-    </div>
+      </label>
+    </label>
   </body>
 </html>
