--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,6 @@
     <title>Random Lotto</title>
   </head>
   <body>
-    <div class="container w-full h-24 overflow-hidden">
-      <video muted autoplay loop class="w-full">
-        <source src="Network.mp4" type="video/mp4" />
-        <strong>Your browser does not support the video</strong>
-      </video>
-    </div>
     <div class="navbar bg-base-100">
       <div class="navbar-start">
         <div class="dropdown">
@@ -59,8 +53,10 @@
         </button>
       </div>
     </div>
-    <div class="container flex flex-wrap justify-evenly m-0">
-      <div class="card w-96 bg-base-100 shadow-xl">
+    <div
+      class="container flex flex-wrap justify-evenly m-0 bg-[url('https://media.discordapp.net/attachments/997271832405225572/1036840736903151656/A_secret_room_full_of_treasures_photo_realistic_studio__e36e1b2c-364b-448a-a629-334af26ae0b2.png?width=1062&height=1062')] bg-blend-overlay"
+    >
+      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
         <input type="checkbox" id="sidebar" class="m-5" />
         <div class="card-body invisible">
           <h2 class="card-title">초콕!</h2>
@@ -70,7 +66,7 @@
           </div>
         </div>
       </div>
-      <div class="card w-96 bg-base-100 shadow-xl">
+      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
         <input type="checkbox" id="sidebar" class="m-5" />
         <div class="card-body invisible">
           <h2 class="card-title">하리보!</h2>
@@ -80,7 +76,7 @@
           </div>
         </div>
       </div>
-      <div class="card w-96 bg-base-100 shadow-xl">
+      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
         <input type="checkbox" id="sidebar" class="m-5" />
         <div class="card-body invisible">
           <h2 class="card-title">컵라면!</h2>
@@ -90,7 +86,7 @@
           </div>
         </div>
       </div>
-      <div class="card w-96 bg-base-100 shadow-xl">
+      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
         <input type="checkbox" id="sidebar" class="m-5" />
         <div class="card-body invisible">
           <h2 class="card-title">오다리!</h2>
@@ -100,7 +96,7 @@
           </div>
         </div>
       </div>
-      <div class="card w-96 bg-base-100 shadow-xl">
+      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
         <input type="checkbox" id="sidebar" class="m-5" />
         <div class="card-body invisible">
           <h2 class="card-title">급식우유!</h2>
@@ -110,7 +106,7 @@
           </div>
         </div>
       </div>
-      <div class="card w-96 bg-base-100 shadow-xl">
+      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
         <input type="checkbox" id="sidebar" class="m-9" />
         <div class="card-body invisible">
           <h2 class="card-title">산소!</h2>
@@ -120,7 +116,7 @@
           </div>
         </div>
       </div>
-      <div class="card w-96 bg-base-100 shadow-xl">
+      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
         <input type="checkbox" id="sidebar" class="m-9" />
         <div class="card-body invisible">
           <h2 class="card-title">랜덤박스!</h2>
@@ -130,7 +126,7 @@
           </div>
         </div>
       </div>
-      <div class="card w-96 bg-base-100 shadow-xl">
+      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
         <input type="checkbox" id="sidebar" class="m-9" />
         <div class="card-body invisible">
           <h2 class="card-title">김장김치!</h2>
