--- a/src/index.html
+++ b/src/index.html
@@ -16,148 +16,150 @@
     <title>Random Lotto</title>
   </head>
   <body>
-    <div class="navbar bg-base-100">
-      <div class="navbar-start">
-        <div class="dropdown">
-          <label tabindex="0" class="btn btn-ghost btn-circle">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-5 w-5"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
+    <div class="container">
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <label tabindex="0" class="btn btn-ghost btn-circle">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h7"
+                />
+              </svg>
+            </label>
+            <ul
+              tabindex="0"
+              class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16M4 12h16M4 18h7"
-              />
-            </svg>
-          </label>
-          <ul
-            tabindex="0"
-            class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
-          >
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Result</a></li>
-          </ul>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Result</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="navbar-center">
+          <p>Random Lotto</p>
+        </div>
+        <div class="navbar-end">
+          <button class="btn btn-ghost p-0">
+            <label for="login" class="btn modal-button">LOGIN</label>
+          </button>
         </div>
       </div>
-      <div class="navbar-center">
-        <p>Random Lotto</p>
-      </div>
-      <div class="navbar-end">
-        <button class="btn btn-ghost p-0">
-          <label for="login" class="btn modal-button">LOGIN</label>
-        </button>
-      </div>
-    </div>
-    <div
-      class="container flex flex-wrap justify-evenly m-0 bg-[url('https://media.discordapp.net/attachments/997271832405225572/1036840736903151656/A_secret_room_full_of_treasures_photo_realistic_studio__e36e1b2c-364b-448a-a629-334af26ae0b2.png?width=1062&height=1062')] bg-blend-overlay"
-    >
-      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
-        <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body invisible">
-          <h2 class="card-title">초콕!</h2>
-          <p>다 아는 맛인데 우유랑 먹으면 맛있쥬?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">이젠 제껍니다</button>
+      <div
+        class="container flex flex-wrap justify-evenly m-0 bg-[url('https://media.discordapp.net/attachments/997271832405225572/1036840736903151656/A_secret_room_full_of_treasures_photo_realistic_studio__e36e1b2c-364b-448a-a629-334af26ae0b2.png?width=1062&height=1062')] bg-blend-overlay"
+      >
+        <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
+          <input type="checkbox" id="sidebar" class="m-5" />
+          <div class="card-body invisible">
+            <h2 class="card-title">초콕!</h2>
+            <p>다 아는 맛인데 우유랑 먹으면 맛있쥬?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">이젠 제껍니다</button>
+            </div>
+          </div>
+        </div>
+        <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
+          <input type="checkbox" id="sidebar" class="m-5" />
+          <div class="card-body invisible">
+            <h2 class="card-title">하리보!</h2>
+            <p>몸에 안좋은게 맛있쥬?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">이젠 제껍니다</button>
+            </div>
+          </div>
+        </div>
+        <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
+          <input type="checkbox" id="sidebar" class="m-5" />
+          <div class="card-body invisible">
+            <h2 class="card-title">컵라면!</h2>
+            <p>고칼로리가 맛있쥬?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">이젠 제껍니다</button>
+            </div>
+          </div>
+        </div>
+        <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
+          <input type="checkbox" id="sidebar" class="m-5" />
+          <div class="card-body invisible">
+            <h2 class="card-title">오다리!</h2>
+            <p>피씨방에서 먹는건 다 맛있쥬?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">이젠 제껍니다</button>
+            </div>
+          </div>
+        </div>
+        <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
+          <input type="checkbox" id="sidebar" class="m-5" />
+          <div class="card-body invisible">
+            <h2 class="card-title">급식우유!</h2>
+            <p>꽝이라고 볼 수 있겠쥬?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">이젠 제껍니다</button>
+            </div>
+          </div>
+        </div>
+        <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
+          <input type="checkbox" id="sidebar" class="m-9" />
+          <div class="card-body invisible">
+            <h2 class="card-title">산소!</h2>
+            <p>숨 크게 쉬면 되겠쥬?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">이젠 제껍니다</button>
+            </div>
+          </div>
+        </div>
+        <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
+          <input type="checkbox" id="sidebar" class="m-9" />
+          <div class="card-body invisible">
+            <h2 class="card-title">랜덤박스!</h2>
+            <p>이것저것 들어있쥬?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">이젠 제껍니다</button>
+            </div>
+          </div>
+        </div>
+        <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
+          <input type="checkbox" id="sidebar" class="m-9" />
+          <div class="card-body invisible">
+            <h2 class="card-title">김장김치!</h2>
+            <p>난데없는 김치가 나오쥬?</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">이젠 제껍니다</button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
-        <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body invisible">
-          <h2 class="card-title">하리보!</h2>
-          <p>몸에 안좋은게 맛있쥬?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">이젠 제껍니다</button>
+      <input type="checkbox" id="login" class="modal-toggle" />
+      <label
+        for="login"
+        class="modal modal-bottom sm:modal-middle cursor-pointer"
+      >
+        <label class="modal-box relative" for="">
+          <h3 class="font-bold text-lg p-3">LOGIN</h3>
+          <input
+            type="text"
+            placeholder="Your ID Type here"
+            class="input input-bordered input-info w-full max-w-xs m-5"
+          />
+          <input
+            type="password"
+            placeholder="Your Password Type here"
+            class="input input-bordered input-info w-full max-w-xs m-5"
+          />
+          <div class="modal-action">
+            <label for="login" class="btn">Enter!</label>
           </div>
-        </div>
-      </div>
-      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
-        <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body invisible">
-          <h2 class="card-title">컵라면!</h2>
-          <p>고칼로리가 맛있쥬?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">이젠 제껍니다</button>
-          </div>
-        </div>
-      </div>
-      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
-        <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body invisible">
-          <h2 class="card-title">오다리!</h2>
-          <p>피씨방에서 먹는건 다 맛있쥬?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">이젠 제껍니다</button>
-          </div>
-        </div>
-      </div>
-      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
-        <input type="checkbox" id="sidebar" class="m-5" />
-        <div class="card-body invisible">
-          <h2 class="card-title">급식우유!</h2>
-          <p>꽝이라고 볼 수 있겠쥬?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">이젠 제껍니다</button>
-          </div>
-        </div>
-      </div>
-      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
-        <input type="checkbox" id="sidebar" class="m-9" />
-        <div class="card-body invisible">
-          <h2 class="card-title">산소!</h2>
-          <p>숨 크게 쉬면 되겠쥬?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">이젠 제껍니다</button>
-          </div>
-        </div>
-      </div>
-      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
-        <input type="checkbox" id="sidebar" class="m-9" />
-        <div class="card-body invisible">
-          <h2 class="card-title">랜덤박스!</h2>
-          <p>이것저것 들어있쥬?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">이젠 제껍니다</button>
-          </div>
-        </div>
-      </div>
-      <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
-        <input type="checkbox" id="sidebar" class="m-9" />
-        <div class="card-body invisible">
-          <h2 class="card-title">김장김치!</h2>
-          <p>난데없는 김치가 나오쥬?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">이젠 제껍니다</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <input type="checkbox" id="login" class="modal-toggle" />
-    <label
-      for="login"
-      class="modal modal-bottom sm:modal-middle cursor-pointer"
-    >
-      <label class="modal-box relative" for="">
-        <h3 class="font-bold text-lg p-3">LOGIN</h3>
-        <input
-          type="text"
-          placeholder="Your ID Type here"
-          class="input input-bordered input-info w-full max-w-xs m-5"
-        />
-        <input
-          type="password"
-          placeholder="Your Password Type here"
-          class="input input-bordered input-info w-full max-w-xs m-5"
-        />
-        <div class="modal-action">
-          <label for="login" class="btn">Enter!</label>
-        </div>
+        </label>
       </label>
-    </label>
+    </div>
   </body>
 </html>
