--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <title>Random Lotto</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container object-center">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
           <div class="dropdown">
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div
-        class="container flex flex-wrap justify-evenly m-0 bg-[url('https://media.discordapp.net/attachments/997271832405225572/1036840736903151656/A_secret_room_full_of_treasures_photo_realistic_studio__e36e1b2c-364b-448a-a629-334af26ae0b2.png?width=1062&height=1062')] bg-blend-overlay"
+        class="container flex flex-wrap justify-evenly m-0 bg-[url('https://media.discordapp.net/attachments/997271832405225572/1036840736903151656/A_secret_room_full_of_treasures_photo_realistic_studio__e36e1b2c-364b-448a-a629-334af26ae0b2.png?width=1062&height=1062')] bg-blend-overlay bg-center"
       >
         <div class="card w-96 bg-base-100 shadow-xl bg-opacity-50">
           <input type="checkbox" id="sidebar" class="m-5" />
