자바스크립트 출력 오류 해결

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,12 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <script defer src="main.js"></script>
     <title>Random Lotto</title>
   </head>
   <body>
+    <div class="intro">Test</div>
+    <div class="intro">Test2</div>
     <div class="container object-center">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
