--- a/2week_homework/src/index.html
+++ b/2week_homework/src/index.html
@@ -6,25 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/2week_homework/dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
     <title>2week_homework</title>
   </head>
   <body>
-    <div class="intro container flex justify-center">
+    <div data-scroll class="intro container flex justify-center">
       <p class="item text-5xl text-white">HELLO</p>
     </div>
-    <div class="intro container flex justify-center">
+    <div data-scroll class="intro container flex justify-center">
       <p class="item text-5xl text-white">WELCOME!</p>
     </div>
-    <div class="intro container flex justify-center">
+    <div data-scroll class="intro container flex justify-center">
       <p class="item text-5xl text-white">IF YOU WANT....</p>
     </div>
-    <div class="intro container flex justify-center">
+    <div data-scroll class="intro container flex justify-center">
       <p class="item text-5xl text-white">EVERYTHING YOU CAN GOT IT!</p>
     </div>
-    <div class="intro container flex justify-center">
+    <div data-scroll class="intro container flex justify-center">
       <p class="item text-5xl text-white">NOW...</p>
     </div>
-    <div class="intro container flex justify-center">
+    <div data-scroll class="intro container flex justify-center">
       <p class="item text-5xl text-white">HERE</p>
     </div>
     <script src="main.js"></script>
