--- a/2week_homework/src/index.html
+++ b/2week_homework/src/index.html
@@ -28,6 +28,9 @@
     <div data-scroll class="intro container flex justify-center">
       <p class="item text-5xl text-white">HERE</p>
     </div>
+    <div class="intro container flex justify-center">
+      <p id="type" class="item text-5xl text-white"></p>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
