--- a/2week_homework/src/index.html
+++ b/2week_homework/src/index.html
@@ -10,27 +10,27 @@
     <title>2week_homework</title>
   </head>
   <body>
-    <div data-scroll class="intro container flex justify-center">
-      <p class="item text-5xl text-white">HELLO</p>
+    <div class="intro bg-black">
+      <p data-scroll class="item text-5xl text-white">HELLO</p>
     </div>
-    <div data-scroll class="intro container flex justify-center">
-      <p class="item text-5xl text-white">WELCOME!</p>
+    <div class="intro bg-black">
+      <p data-scroll class="item text-5xl text-white">WELCOME!</p>
     </div>
-    <div data-scroll class="intro container flex justify-center">
-      <p class="item text-5xl text-white">IF YOU WANT....</p>
+    <div class="intro bg-black">
+      <p data-scroll class="item text-5xl text-white">
+        Your Art Gallery is Here!
+      </p>
     </div>
-    <div data-scroll class="intro container flex justify-center">
-      <p class="item text-5xl text-white">EVERYTHING YOU CAN GOT IT!</p>
+    <div class="intro bg-black">
+      <p data-scroll class="item text-5xl text-white">Your Effort</p>
     </div>
-    <div data-scroll class="intro container flex justify-center">
-      <p class="item text-5xl text-white">NOW...</p>
+    <div class="intro bg-black">
+      <p data-scroll class="item text-5xl text-white">Your Result</p>
     </div>
-    <div data-scroll class="intro container flex justify-center">
-      <p class="item text-5xl text-white">HERE</p>
+    <div class="intro bg-black">
+      <p data-scroll class="item text-5xl text-white">Open!</p>
     </div>
-    <div class="intro container flex justify-center">
-      <p id="type" class="item text-5xl text-white"></p>
-    </div>
+    <div class="gradient"></div>
     <script src="main.js"></script>
   </body>
 </html>
