--- a/2week_homework/src/index.html
+++ b/2week_homework/src/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/2week_homework/dist/output.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@2.38.1/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
     <title>2week_homework</title>
   </head>
   <body>
+    <div class="first"></div>
     <div class="intro bg-black">
       <p data-scroll class="item text-5xl text-white">HELLO</p>
     </div>
@@ -31,6 +38,41 @@
       <p data-scroll class="item text-5xl text-white">Open!</p>
     </div>
     <div class="gradient"></div>
+    <div class="board flex border-gray-400">
+      <div class="board_item border-gray-400 flex-1">
+        <img
+          src="/2week_homework/src/img/allkpop_1645217742_untitled-1.jpg"
+          alt=""
+        />
+      </div>
+      <div class="board_item border-gray-400 flex-1">
+        <img
+          src="/2week_homework/src/img/f088b5ff791fb534c5f167817985d654.jpg"
+          alt=""
+        />
+      </div>
+      <div class="board_item border-gray-400 flex-1">
+        <img
+          src="/2week_homework/src/img/female-kpop-idols-spring-fashion_iu.jpg"
+          alt=""
+        />
+      </div>
+      <div class="board_item border-gray-400 flex-1">
+        <img
+          src="/2week_homework/src/img/how-to-dress-up-like-a-kpop-idol.jpg"
+          alt=""
+        />
+      </div>
+      <div class="board_item border-gray-100 flex-1">
+        <img src="/2week_homework/src/img/images.jpeg" alt="" />
+      </div>
+      <div class="board_item border-gray-400 flex-1">
+        <img
+          src="/2week_homework/src/img/male-kpop-idol-best-fancam_wei-kim-yohan.jpeg"
+          alt=""
+        />
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
