--- a/2week_homework/src/index.html
+++ b/2week_homework/src/index.html
@@ -38,7 +38,7 @@
       <p data-scroll class="item text-5xl text-white">Open!</p>
     </div>
     <div class="gradient"></div>
-    <div class="board flex border-gray-400">
+    <div class="board flex gap-1 border-gray-400">
       <div class="board_item border-gray-400 flex-1">
         <img
           src="/2week_homework/src/img/allkpop_1645217742_untitled-1.jpg"
