--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,12 @@
     <title>Random Lotto</title>
   </head>
   <body>
-    <div class="intro">Test</div>
-    <div class="intro">Test2</div>
+    <div class="intro bg-black flex">
+      <h1>Test</h1>
+    </div>
+    <div class="intro bg-black flex">
+      <h1>Test2</h1>
+    </div>
     <div class="container object-center">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
