--- a/2week_homework/src/index.html
+++ b/2week_homework/src/index.html
@@ -40,37 +40,22 @@
     <div class="gradient"></div>
     <div class="board flex gap-1 border-gray-400">
       <div class="board_item border-gray-400 flex-1">
-        <img
-          src="/vue_homework/2week_homework/src/img/allkpop_1645217742_untitled-1.jpg"
-          alt=""
-        />
+        <img src="./img/allkpop_1645217742_untitled-1.jpg" alt="" />
       </div>
       <div class="board_item border-gray-400 flex-1">
-        <img
-          src="/vue_homework/2week_homework/src/img/f088b5ff791fb534c5f167817985d654.jpg"
-          alt=""
-        />
+        <img src="./img/f088b5ff791fb534c5f167817985d654.jpg" alt="" />
       </div>
       <div class="board_item border-gray-400 flex-1">
-        <img
-          src="/vue_homework/2week_homework/src/img/female-kpop-idols-spring-fashion_iu.jpg"
-          alt=""
-        />
+        <img src="./img/female-kpop-idols-spring-fashion_iu.jpg" alt="" />
       </div>
       <div class="board_item border-gray-400 flex-1">
-        <img
-          src="/vue_homework/2week_homework/src/img/how-to-dress-up-like-a-kpop-idol.jpg"
-          alt=""
-        />
+        <img src="./img/how-to-dress-up-like-a-kpop-idol.jpg" alt="" />
       </div>
       <div class="board_item border-gray-100 flex-1">
-        <img src="/vue_homework/2week_homework/src/img/images.jpeg" alt="" />
+        <img src="./img/images.jpeg" alt="" />
       </div>
       <div class="board_item border-gray-400 flex-1">
-        <img
-          src="/vue_homework/2week_homework/src/img/male-kpop-idol-best-fancam_wei-kim-yohan.jpeg"
-          alt=""
-        />
+        <img src="./img/male-kpop-idol-best-fancam_wei-kim-yohan.jpeg" alt="" />
       </div>
     </div>
     <script src="main.js"></script>
