--- a/2week_homework/src/index.html
+++ b/2week_homework/src/index.html
@@ -39,6 +39,7 @@
     </div>
     <div class="gradient"></div>
     <div class="board flex gap-1 border-gray-400">
+      <div class="flex-1 invisible"></div>
       <div class="board_item border-gray-400 flex-1">
         <img src="./img/allkpop_1645217742_untitled-1.jpg" alt="" />
       </div>
@@ -56,6 +57,12 @@
       </div>
       <div class="board_item border-gray-400 flex-1">
         <img src="./img/male-kpop-idol-best-fancam_wei-kim-yohan.jpeg" alt="" />
+      </div>
+      <div class="flex-1 invisible"></div>
+    </div>
+    <div class="btn-container">
+      <div class="btn-group">
+        <button class="btn">1</button><button class="btn">2</button>
       </div>
     </div>
     <script src="main.js"></script>
